# Linux_Assignment

./: CMakeLists.txt  README.md
source/cpp/: data.cpp  edge.cpp  face.cpp  main.cpp  vector.cpp  vertex.cpp
source/hpp/: data.hpp  edge.hpp  essential  face.hpp  vector.hpp  vertex.hpp
